2007-11-06  Ryan Nunn <colourles@users.sourceforge.net>
	* effects.cc, exult.cc, gamerend.cc, gamewin.cc, gamewin.h : Two words:
	  "Smooth Scrolling". Some more words: It's a bit of a hack but it works
	  really well. The screen position is interpolated based on the camera 
	  actor's animation rate or get_std_delay() if it's not set. The camera 
	  actor's position is also interpolated (though in a really hacky manner)
	  so the avatar's movement isn't jerky. All other objects do NOT have their
	  movement interpolated, but just smooth avatar movement is a HUGE 
	  improvement. Added config key "config/gameplay/smooth_scrolling"
	  to control this. This is enabled by default for now. Code diffs should 
	  highlight how things have changed.
	* actors.cc : Added a slight hack to Main_actor::handle_event to stop
	  some 'double stepping' that was looking really bad with smooth 
	  scrolling. See the comment in the code for details
	* gumps/GameplayOptions_gump.* : Added toggle for smooth scrolling.

2007-11-04    <jeff@mini.nerble.net>

	* server/server.cc: Support 'locate' with 'quality' in ES.

	* exult.cc: Show FPS.  Also, made an experimental change to the
	event'loop's rendering condition.

2007-10-31	Marzo Sette Torres Junior <marzojr@yahoo.com>
	Fixed a few opcode bugs. Also, swapped the purpose of cnt1 and cnt2 in the
	repeat2 script opcode and removed the initial "reset" of the counter. Both
	changes are verified in the originals.

2007-10-30	Marzo Sette Torres Junior <marzojr@yahoo.com>
	Fixed crash whan attacking objects bare-handed.

2007-10-29	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* monsters.cc: Setting quality for monster equipment only if it is a weapon
	  that uses charges.
	* actors.cc: Preventing actors from taking a step if it would change their
	  z coordinate by more than 1. NPCs now look for combat more often. Lastly,
	  paralyze flag completely prevents movement.
	* gamewin.cc: Paralyze flag completely prevents avatar from moving.